Fix issues with the history box in author view, the line height messing up two line statuses (like reminders or invitation messages) and the box being too tall when only one even exists.

--- a/public/less/doctools.less
+++ b/public/less/doctools.less
@@ -75,7 +75,7 @@
     width: 1018px;
     border : 1px solid #868686;
     margin : 0 auto 25px;
-    min-height: 120px;
+    min-height: 100px;
 
     .tab-container {
         border-color: transparent;
@@ -98,7 +98,9 @@
 
         tbody {
             tr td.row {
-                line-height: 38px;
+                line-height: 24px;
+                padding-top: 5px;
+                padding-bottom: 5px;
             }
         }
     }
